--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
-  /* background: url("./assets/images/background/gradient.png") center no-repeat;
-  background-size: cover; */
+  background-color: black;
+  /* background: url("./assets/images/background/twarz_black.png") center no-repeat; */
+  /* background-size: cover; */
   color: white;
 }
 
