--- a/src/styles/_downArrow.scss
+++ b/src/styles/_downArrow.scss
@@ -4,4 +4,9 @@
     position: fixed;
     bottom: 1.4rem;
     right: 1.4rem;
+    transition: all 0.2s linear;
+    cursor: pointer;
+    &:hover {
+        opacity: 0.5;
+    }
 }
