--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,10 +1,29 @@
 .layout-wrapper {
+  position: relative;
+
+  &::after {
+    content: "";
+    width: 40%;
+    height: 1px;
+    position: absolute;
+    bottom: -50px;
+    right: 0;
+    left: 0;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.2);
+    z-index: 1;
+  }
   .layout {
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     opacity: 0;
+    min-height: 1200px;
 
     .layout-container {
+      width: 100%;
+      height: auto;
       padding: 60px 25px;
       position: relative;
 
@@ -23,6 +42,7 @@
 @media (max-width: 1024px) {
   .layout-wrapper {
     .layout {
+      min-height: 800px;
       .layout-container {
         & h1 {
           font-size: 30px;
