--- a/src/styles/_technologies.scss
+++ b/src/styles/_technologies.scss
@@ -1,33 +1,44 @@
-.technologies-wrapper {
+#Technologies {
   position: relative;
-  display: grid;
-  width: 100%;
+  background-color: #141414;
+  & .layout {
+    display: flex;
+  }
 
-  .slider-item {
-    min-width: 350px;
-    height: 350px;
+  .technologies-wrapper {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: grid;
+    justify-content: center;
+    align-items: center;
 
-    & .slider-item-title {
-      height: 20%;
-      & h4 {
-        font-size: 30px;
-        text-transform: uppercase;
-        padding: 20px 0 20px;
+    .slider-item {
+      min-width: 350px;
+      height: 350px;
+
+      & .slider-item-title {
+        height: 20%;
+        & h4 {
+          font-size: 30px;
+          text-transform: uppercase;
+          padding: 20px 0 20px;
+        }
       }
-    }
 
-    .slider-item-image {
-      width: 100%;
-      height: 80%;
-      display: grid;
-      justify-content: center;
-      align-items: center;
-      font-size: 120px;
-      object-fit: cover;
-      background-color: #0d0d0d;
-      svg {
-        width: 220px;
-        height: 220px;
+      .slider-item-image {
+        width: 100%;
+        height: 80%;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        font-size: 120px;
+        object-fit: cover;
+        background-color: #0d0d0dd7;
+        svg {
+          width: 220px;
+          height: 220px;
+        }
       }
     }
   }
