--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -791,15 +791,37 @@
   opacity: 0.5;
 }
 
+.layout-wrapper {
+  position: relative;
+}
+
+.layout-wrapper::after {
+  content: "";
+  width: 40%;
+  height: 1px;
+  position: absolute;
+  bottom: -50px;
+  right: 0;
+  left: 0;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 0.2);
+  z-index: 1;
+}
+
 .layout-wrapper .layout {
+  width: 100%;
+  height: 100%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr) [12];
   grid-template-columns: repeat(12, 1fr);
   opacity: 0;
+  min-height: 1200px;
 }
 
 .layout-wrapper .layout .layout-container {
+  width: 100%;
+  height: auto;
   padding: 60px 25px;
   position: relative;
 }
@@ -814,6 +836,9 @@
 }
 
 @media (max-width: 1024px) {
+  .layout-wrapper .layout {
+    min-height: 800px;
+  }
   .layout-wrapper .layout .layout-container h1 {
     font-size: 30px;
     letter-spacing: 10px;
@@ -933,29 +958,47 @@
   }
 }
 
-.technologies-wrapper {
+#Technologies {
+  position: relative;
+  background-color: #141414;
+}
+
+#Technologies .layout {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#Technologies .technologies-wrapper {
+  width: 100%;
+  height: 100%;
   position: relative;
   display: -ms-grid;
   display: grid;
-  width: 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
-.technologies-wrapper .slider-item {
+#Technologies .technologies-wrapper .slider-item {
   min-width: 350px;
   height: 350px;
 }
 
-.technologies-wrapper .slider-item .slider-item-title {
+#Technologies .technologies-wrapper .slider-item .slider-item-title {
   height: 20%;
 }
 
-.technologies-wrapper .slider-item .slider-item-title h4 {
+#Technologies .technologies-wrapper .slider-item .slider-item-title h4 {
   font-size: 30px;
   text-transform: uppercase;
   padding: 20px 0 20px;
 }
 
-.technologies-wrapper .slider-item .slider-item-image {
+#Technologies .technologies-wrapper .slider-item .slider-item-image {
   width: 100%;
   height: 80%;
   display: -ms-grid;
@@ -969,10 +1012,10 @@
   font-size: 120px;
   -o-object-fit: cover;
   object-fit: cover;
-  background-color: #0d0d0d;
+  background-color: #0d0d0dd7;
 }
 
-.technologies-wrapper .slider-item .slider-item-image svg {
+#Technologies .technologies-wrapper .slider-item .slider-item-image svg {
   width: 220px;
   height: 220px;
 }
